--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "pybomapi"
+name = "bomapi"
 version = "0.1.0"
 description = "Python interface to the Australia Government BOM Weather API"
 authors = ["Tim Savage <tim@savage.company>"]
@@ -8,7 +8,6 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.8"
 httpx = "^0.22.0"
-yarl = "^1.7.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
