--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,9 @@ name = "bomapi"
 version = "0.1.0"
 description = "Python interface to the Australia Government BOM Weather API"
 authors = ["Tim Savage <tim@savage.company>"]
-license = "MIT"
+license = "BSD-3-Clause"
+readme = "README.md"
+repository = "https://github.com/timsavage/bomapi"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -11,6 +13,9 @@ httpx = "^0.22.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
+
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/timsavage/bomapi/issues"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
